--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <header>
             <nav>
+		<a href="./resume.html">Resume</a>
+                <a href="./gallery.html">Gallery</a>
+                <a href="./projects.html">Projects</a>
 
             </nav>
         </header>
